@@ -31,6 +31,8 @@ Version 6.0.5
   stored procedure parameters but bug #44985 is now fixed
 - fixed bug that causes a 'connection not open' error when using a commandbuilder with
   a data adapter and inserts are used (bug #34657)
+- fixed problem with tokenizer that would cause it to not return some tokens when they start with 
+  a character that could possibly start a comment but doesn't
   
 Version 6.0.4
 - fixed regression where using stored procs with datasets (bug #44460)
